New logo and favicon

--- a/synth/index.html
+++ b/synth/index.html
@@ -9,6 +9,7 @@
 	<link rel="stylesheet" href="css/bootstrap/bootstrap-theme.min.css">
 	<link rel="stylesheet" href="css/nanoscroller.css">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
+	<link rel="shortcut icon" href="modulator32.ico" />
 </head>
 
 <body>
@@ -20,7 +21,7 @@
 			class="btn btn-primary btn-sm" style="width: 4em; padding: 5px">Code</a>
 	</div>
 	<div style="width: 250px; margin: 0 auto">
-		<img src="img/logo.png" style="width: 250px">
+		<img src="img/logo.svg" style="width: 250px">
 	</div>
 	<div style="display: inline-block; position: absolute; right: 6px; top: 0px; margin-top: 4px">
 		<a href="help.html" target="_blank"
