Logo, favicon, prz

--- a/synth/prz/index.html
+++ b/synth/prz/index.html
@@ -265,8 +265,8 @@ osc.disconnect();
 		</code></pre>
 	</section>
 
-	<section data-background="#D4FFBB" class="light">
-		<img src="img/modulator.png"
+	<section data-background="#0AA" class="light">
+		<img src="img/modulator.svg"
 			style="border: none; background-color: inherit; box-shadow: none">
 		<p><a href="https://lcrespom.github.io/synth/">Live Demo</a></p>
 		<p>Repo at <a href="https://github.com/lcrespom/Modulator">https://github.com/lcrespom/Modulator</a></p>
