--- a/synth/index.html
+++ b/synth/index.html
@@ -200,5 +200,17 @@
 <script src="js/vendor/jquery.nanoscroller.min.js"></script>
 <script src="js/bundle.js"></script>
 
+<!-- Start of StatCounter Code -->
+<script type="text/javascript">
+	var sc_project=10782832; 
+	var sc_invisible=1; 
+	var sc_security="6564f814"; 
+	var scJsHost = (("https:" == document.location.protocol) ? "https://secure." : "http://www.");
+	document.write("<sc"+"ript type='text/javascript' src='" + scJsHost +
+		"statcounter.com/counter/counter.js'></"+"script>");
+</script>
+<!-- End of StatCounter Code -->
+
+
 </body>
 </html>
