Fixed incorrect link to minion instead of ng-crud

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 			rendering it for Create / Read / Update / Delete operations. 
 		</p>
 		<p>For more information and a working demo, check out its
-			<a href="https://github.com/lcrespom/minion">GitHub repository</a>.
+			<a href="https://github.com/lcrespom/ng-crud">GitHub repository</a>.
 		</p>
 
 
