Added Neural Network project

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 			Modulator can be used live <a href="synth/">here</a>.
 		</p>
 		<p>
-			You can check its <a href="synth/help.html">documentation</a>, and 
+			You can check its <a href="synth/help.html">documentation</a>, and
 			get the source code from the
 			<a href="https://github.com/lcrespom/Modulator">GitHub repository</a>.
 			There is also a <a href="/synth/prz">presentation</a>
@@ -70,7 +70,7 @@
 			any data data structure.
 			The developer defines the data as a simple JSON schema, then
 			the library takes charge of accessing the data from the backend and
-			rendering it for Create / Read / Update / Delete operations. 
+			rendering it for Create / Read / Update / Delete operations.
 		</p>
 		<p>For more information and a working demo, check out its
 			<a href="https://github.com/lcrespom/ng-crud">GitHub repository</a>.
@@ -104,11 +104,26 @@
 				<li>Client simply displays computation status. Implemented in HTML5
 					canvas + JavaScript.
 				</li>
-			</ul>	
+			</ul>
 		</p>
 
 		<p>Check out its
 			<a href="https://github.com/lcrespom/genetic_tsp_java">GitHub repository</a>
+		</p>
+
+
+		<h2>Neural Network</h2>
+		<p>A simple neural network consisting of an input layer, a hidden layer and an output
+			layer. The number of neurons for each layer is adjustable.</p>
+		<p>The neural network implements the backpropagation algorithm in order to learn and
+			adjust its weights from sample input and output data. After the learning phase,
+			the network can be used to generate the output from new input data.</p>
+		<p>A simple <a href="nnn/">web-based user interface</a> is provided, which can be used
+			to adjust the network parameters and provide learn and test data.
+		</p>
+
+		<p>Check out its
+			<a href="https://github.com/lcrespom/nnn">GitHub repository</a>
 		</p>
 	</div>
 </body>
