--- a/nnn/index.html
+++ b/nnn/index.html
@@ -39,17 +39,27 @@
 				<div class="form-group">
 					<label for="ninputs">Number of inputs:</label>
 					<input id="nimputs" value="3"
-						type="number" min="1" max="1000" step="1" class="form-control">
+						type="number" min="1" max="100" step="1" class="form-control">
 				</div>
 				<div class="form-group">
-					<label for="nhidden">Neurons in hidden layer:</label>
+					<label for="nhidden" data-toggle="tooltip" data-placement="bottom"
+						title="Multiple hidden layers can be specified
+						by providing a list of numbers separated by spaces, e.g. '4 3 4'">
+						Neurons in hidden layer(s):
+					</label>
 					<input id="nhidden" value="4"
-						type="number" min="1" max="1000" step="1" class="form-control">
+						type="text" size="7" class="form-control">
 				</div>
 				<div class="form-group">
 					<label for="noutputs">Number of outputs:</label>
 					<input id="noutputs" value="3"
-						type="number" min="1" max="1000" step="1" class="form-control">
+						type="number" min="1" max="100" step="1" class="form-control">
+				</div>
+				<div class="form-group">
+					<button id="butdiagram" style="vertical-align: top; width: 9em" disabled
+						type="button" class="btn btn-primary">Show diagram</button>
+					<canvas width="500" height="400" id="nn-diagram" style="display:none">
+					</canvas>
 				</div>
 			</fieldset>
 		</form>
@@ -60,19 +70,18 @@
 				<div class="form-group">
 					<label for="maxerror">Acceptable error:</label>
 					<input id="maxerror" value="0.01"
-						type="number" min="0" max="1000000" class="form-control">
+						type="number" min="0" max="100000" class="form-control">
 				</div>
 				<div class="form-group">
 					<label for="maxiters">Maximum iterations:</label>
-					<input id="maxiters" value="1000"
-						type="number" min="1" max="999999999" step="1" class="form-control">
+					<input id="maxiters" value="10000"
+						type="number" min="1" max="99999999" step="1" class="form-control">
 				</div>
 				<div class="form-group">
-					<label for="lsample">Learn data line format:</label>
-					<input id="lsample" value="in1 in2 in3 / out1 out2 out3"
-						type="text" class="form-control" readonly size="30">
+					<label for="epsilon">Epsilon:</label>
+					<input id="epsilon" value="0.5"
+						type="number" min="0" max="9999" class="form-control">
 				</div>
-				<br>
 				<div class="form-group" style="width: 100%; padding-right: 1em">
 					<label for="ldata">Learn data lines:</label><br>
 					<textarea id="ldata" style="width: 100%"
@@ -106,12 +115,6 @@
 		<form class="form-inline">
 			<fieldset>
 				<legend>Test</legend>
-				<div class="form-group">
-					<label for="tsample">Test data line format:</label>
-					<input id="tsample" value="in1 in2 in3"
-						type="text" class="form-control" readonly size="15">
-				</div>
-				<br>
 				<div class="form-group" style="width: 40%; padding-right: 1em">
 					<label for="tdata">Test data lines:</label><br>
 					<textarea id="tdata" style="width: 100%"
