Fixed learn formula sample

--- a/nnn/index.html
+++ b/nnn/index.html
@@ -172,7 +172,7 @@
             value: `function calcOutputs(input1, input2, input3) {
 	let output1 = (input1 + input2 + input3) / 3;
 	let output2 = input1 * input2 * input3;
-	let output3 = input1 + input2 - input3;
+	let output3 = output1 * output2;
 	return [output1, output2, output3];
 }`,
             language: 'typescript',
