Formula editor is resizable

--- a/nnn/index.html
+++ b/nnn/index.html
@@ -161,8 +161,7 @@
 				</div>
 				<div class="form-group" style="width: 100%; padding-right: 1em">
 					<label for="js-editor">Formula code:</label><br>
-					<div id="js-editor" style="width: 100%; height: 20ex"
-						class="form-control">
+					<div id="js-editor" class="form-control">
 						<div id="monaco-here" style="width: 100%; height: 100%"></div>
 					</div>
 <script>
