Stop button support

--- a/nnn/index.html
+++ b/nnn/index.html
@@ -113,6 +113,10 @@
 					<input id="lerror"
 						type="text" class="form-control" readonly size="9">
 				</div>
+				<div class="form-group" style="float: right">
+					<button id="butstop" style="display: none"
+						type="button" class="btn btn-warning">Stop</button>
+				</div>
 			</fieldset>
 		</form>
 
