--- a/index.html
+++ b/index.html
@@ -113,18 +113,29 @@
 
 
 		<h2>Neural Network</h2>
-		<p>A simple neural network consisting of an input layer, a hidden layer and an output
-			layer. The number of neurons for each layer is adjustable.</p>
-		<p>The neural network implements the backpropagation algorithm in order to learn and
+		<p>A neural network, implementing the backpropagation algorithm in order to learn and
 			adjust its weights from sample input and output data. After the learning phase,
 			the network can be used to generate the output from new input data.</p>
-		<p>A simple <a href="nnn/">web-based user interface</a> is provided, which can be used
+		<p>A <a href="nnn/">web-based user interface</a> is provided, which can be used
 			to adjust the network parameters and provide learn and test data.
 		</p>
 
 		<p>Check out its
 			<a href="https://github.com/lcrespom/nnn">GitHub repository</a>
 		</p>
+
+
+		<h2>Shape Wars</h2>
+		<p>A small retro <em>Space Invaders</em> style videogame using the HTML5 <code>&lt;CANVAS&gt;</code> element and 2D vectorial drawing.</p>
+
+		<p>You can play it <a href=shape-wars>Here</a>. Use <code>Z</code> and <code>X</code> to move the ship left and right, and <code>R</code> to shoot.
+
+		<p>Check out its
+			<a href="https://github.com/lcrespom/shape-wars">GitHub repository</a>
+		</p>
+
+
+
 	</div>
 </body>
 </html>
