Minor change in html

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 		<h2>Shape Wars</h2>
 		<p>A small retro <em>Space Invaders</em> style videogame using the HTML5 <code>&lt;CANVAS&gt;</code> element and 2D vectorial drawing.</p>
 
-		<p>You can play it <a href=shape-wars>Here</a>. Use <b>Z</b> and <b>X</b> to move the ship left and right, and <b>R</b> to shoot.
+		<p>You can play it <a href=shape-wars>Here</a>. Use <b>Z</b> and <b>X</b> to move the ship left and right, and <b>M</b> to shoot.
 
 		<p>Check out its
 			<a href="https://github.com/lcrespom/shape-wars">GitHub repository</a>
