--- a/pf-talk/index.html
+++ b/pf-talk/index.html
@@ -85,7 +85,7 @@
 	<section data-state="main-title" data-transition="zoom-in none">
 		<h2 style="font-size: 270%">Functional Patterns for everyday applications</h2>
 		<h4 style="margin-top: 2em">How can we use functional programming in our applications?</h4>
-		<a href="https://lcrespom.github.io/pf-talk">lcrespom.github.io/pf-patterns</a>
+		<a href="https://lcrespom.github.io/pf-talk">lcrespom.github.io/pf-talk</a>
 
 		<div style="height: 1em"></div>
 		<div style="display:inline-block; float: left; padding-top: 2em">
