--- a/pf-talk/index.html
+++ b/pf-talk/index.html
@@ -128,6 +128,7 @@
 			</li>
 			<li>Advantages of a pure function:
 				<ul>
+					<li>Fully predictable & reliable: will always return the same for the same parameters</li>
 					<li>Simple to reason about: does not depend on the external world</li>
 					<li>Simple to test: requires no setup, just invocation</li>
 					<li>Avoids all bugs that are caused by side-effects</li>
