Started with full PLL

--- a/rubixlator/index.html
+++ b/rubixlator/index.html
@@ -47,6 +47,7 @@
 	</div>
 
 	<div class="algorithms_box">
+		<!--******************** 2 look OLL ********************-->
 		<h2>2 Look OLL</h2>
 		<h3>OLL edge pieces</h3>
 		<div class="algorithm_row">
@@ -98,6 +99,7 @@
 			</div>
 		</div>
 
+		<!--******************** 2 look PLL ********************-->
 		<h2>2 Look PLL</h2>
 		<h3>Permuting corner pieces</h3>
 		<div class="algorithm_row">
@@ -107,7 +109,7 @@
 			</div>
 			<div class="algorithm_item">
 				<img src="img/PLL-E-perm-example.png">
-				<p>X' [R U' R' D] [R U R' D'] [R U R' D] [R U' R' D']</p>
+				<p>x' [R U' R' D] [R U R' D'] [R U R' D] [R U' R' D']</p>
 			</div>
 		</div>
 		<h3>Permuting edge pieces</h3>
@@ -129,6 +131,23 @@
 				<p>M2 U M2 U2 M2 U M2</p>
 			</div>
 		</div>
+
+		<!--******************** Full PLL ********************-->
+		<!-- See http://www.rubiksplace.com/speedcubing/PLL-algorithms/ -->
+		<h2>Full PLL</h2>
+		<h3>Corner & Edge Swap Permutations</h3>
+		<div class="algorithm_row">
+			<div class="algorithm_item">
+				<img src="img/PLL-T-perm.png">
+				<p>[R U R' U'] R' F R2 U' R' U' [R U R' F']</p>
+			</div>
+			<div class="algorithm_item">
+				<img src="img/PLL-F-perm.png">
+				<p>[R' U R U'] R2 y' [R' U' R U] y x [R U R' U'] [R2 x U']</p>
+			</div>
+		</div>
+		<h3>Corner & Edge Cycle Permutations</h3>
+		ToDo
 	</div>
 
 	<script src="rubixlator.js"></script>
