Added missing files

--- a/rubixlator/index.html
+++ b/rubixlator/index.html
@@ -43,7 +43,7 @@
 	</div>
 
 	<div class="diagram_box">
-		<canvas id="diagram" width="800" height="400"></canvas>
+		<canvas id="diagram" width="800" height="480"></canvas>
 	</div>
 
 	<div class="algorithms_box">
@@ -142,8 +142,40 @@
 				<p>[R U R' U'] R' F R2 U' R' U' [R U R' F']</p>
 			</div>
 			<div class="algorithm_item">
-				<img src="img/PLL-F-perm.png">
-				<p>[R' U R U'] R2 y' [R' U' R U] y x [R U R' U'] [R2 x U']</p>
+				<img src="img/PLL-F-perm.png" style="transform: rotate(90deg)">
+				<p>R' U' F' / R U R 'U' / R' F R2 U' / R' U' R U / R' U R</p>
+			</div>
+			<div class="algorithm_item">
+				<img src="img/PLL-Ja-perm.png">
+				<p>[R' U L'] U2 [R U' R' U2] [L R U']</p>
+			</div>
+			<div class="algorithm_item">
+				<img src="img/PLL-Jb-perm.png">
+				<p>[R U R' F'] [R U R' U' R' F] [R2 U' R' U']</p>
+			</div>
+			<div class="algorithm_item">
+				<img src="img/PLL-Ra-perm.png">
+				<p>[L U2' L' U2'] L F' L' U' L U L F L2' U</p>
+			</div>
+			<div class="algorithm_item">
+				<img src="img/PLL-Rb-perm.png">
+				<p>[R' U2 R U2] R' F R U R' U' R' F' R2 U'</p>
+			</div>
+			<div class="algorithm_item">
+				<img src="img/PLL-V-perm.png">
+				<p>[R' U R' U'] [x2 y'] [R' U R' U'] [l R U'] [R' U R] U</p>
+			</div>
+			<div class="algorithm_item">
+				<img src="img/PLL-Y-perm.png">
+				<p>[F R U' R' U' R U R' F'] [R U R' U'] [R' F R F']</p>
+			</div>
+			<div class="algorithm_item">
+				<img src="img/PLL-Na-perm.png">
+				<p>{L U' R U2 L' U R'} {L U' R U2 L' U R'} U</p>
+			</div>
+			<div class="algorithm_item">
+				<img src="img/PLL-Nb-perm.png">
+				<p>{R' U L' U2 R U' L} {R' U L' U2 R U' L} U'</p>
 			</div>
 		</div>
 		<h3>Corner & Edge Cycle Permutations</h3>
