--- a/rubixlator/index.html
+++ b/rubixlator/index.html
@@ -38,7 +38,7 @@
 	<h1>Rubik's cube notation translator</h1>
 
 	<div class="notation_box">
-			Enter notation: <input id="notation" autofocus>
+			Enter notation: <input id="notation" autofocus size="50">
 			<p id="error_msg">&nbsp;</p>
 	</div>
 
