Fixed chameleon move

--- a/rubixlator/index.html
+++ b/rubixlator/index.html
@@ -90,8 +90,8 @@
 				<p>R2 D [R' U2 R] D' [R' U2 R']</p>
 			</div>
 			<div class="algorithm_item">
-				<img src="img/OLL-24.PNG">
-				<p>l' U' L U R U' [r' F]</p>
+				<img src="img/OLL-24.PNG" style="transform: rotate(180deg)">
+				<p>r U R' U' / r' F R F'</p>
 			</div>
 			<div class="algorithm_item">
 				<img src="img/OLL-25.PNG">
