--- a/rubixlator/index.html
+++ b/rubixlator/index.html
@@ -162,8 +162,8 @@
 				<p>[R' U2 R U2] R' F R U R' U' R' F' R2 U'</p>
 			</div>
 			<div class="algorithm_item">
-				<img src="img/PLL-V-perm.png">
-				<p>[R' U R' U'] [xx y'] [R' U R' U'] [l R U'] [R' U R] U</p>
+				<img src="img/PLL-V-perm.png" style="transform: rotate(90deg)">
+				<p>F' U F' U' R'/ F' R2 U' R'/ U R' F R F</p>
 			</div>
 			<div class="algorithm_item">
 				<img src="img/PLL-Y-perm.png">
