--- a/rubixlator/index.html
+++ b/rubixlator/index.html
@@ -162,8 +162,8 @@
 				<p>[R' U2 R U2] R' F R U R' U' R' F' R2 U'</p>
 			</div>
 			<div class="algorithm_item">
-				<img src="img/PLL-V-perm.png" style="transform: rotate(90deg)">
-				<p>F' U F' U' R'/ F' R2 U' R'/ U R' F R F</p>
+				<img src="img/PLL-V-perm.png">
+				<p>L U' R' U/ L' U' L U'/ R U L' U2/ R' U2 R</p>
 			</div>
 			<div class="algorithm_item">
 				<img src="img/PLL-Y-perm.png">
