Changed order and replaced TSP with the JS version

--- a/index.html
+++ b/index.html
@@ -42,69 +42,20 @@
 			repository for suggestions.
 		</p>
 
-		<h2>Minion</h2>
-		<p>Minion is a tiny WebComponent-oriented UI framework. It can be learned
-			very fast and is good enough for small to medium single-page applications.
-		</p>
-		<p>Minion does not make use of the WebComponent standard for building the UI,
-			but still the development approach is based on breaking the Web App into
-			independent and reusable web components. Each component is defined as:
-			<ul>
-				<li>An HTML template, containing plain HTML and Mustache template expressions.
-				</li>
-				<li>An optional JavaScript Object or class. If present, several of its methods
-					will be invoked during the application lifecycle: when the component is
-					created, after it is rendered and before it is removed. Also, components
-					hold data accessible to the template and can handle events triggered from
-					elements it contains.
-				</li>
-			</ul>
-		</p>
-		<p>For more information and a working demo, check out its
-			<a href="https://github.com/lcrespom/minion">GitHub repository</a>.
-		</p>
-
-
-		<h2>ng-crud</h2>
-		<p>An Angular-based library that provides generic CRUD functions to
-			any data data structure.
-			The developer defines the data as a simple JSON schema, then
-			the library takes charge of accessing the data from the backend and
-			rendering it for Create / Read / Update / Delete operations.
-		</p>
-		<p>For more information and a working demo, check out its
-			<a href="https://github.com/lcrespom/ng-crud">GitHub repository</a>.
-		</p>
-
-
-		<h2>jsonfmt</h2>
-		<p>A simple JSON formatting command-line tool, which can be used to pack or nicely format
-			JSON files. Typical usages are:
-			<ul>
-				<li>Packing a nicely formatted JSON file in to a single line, as a build
-					step to reduce the size of the target file.
-				</li>
-				<li>Formatting a JSON string into a more readable version of itself, so
-					it is easy to read and edit by human beings.
-				</li>
-			</ul>
-		</p>
-		<p>Check out its
-			<a href="https://github.com/lcrespom/jsonfmt">GitHub repository</a>
-			for more detailed documentation.
-		</p>
-
 
 		<h2>Genetic TSP</h2>
-		<p>A genetic engine that solves the Travelling Salesman Problem (TSP):
+		<p>A genetic engine that solves the Traveling Salesman Problem (TSP):
 			finding the shortest path for visiting a given set of locations.
-			<ul>
-				<li>Server performs computation. Implemented in Java, running with Jetty.
-				</li>
-				<li>Client simply displays computation status. Implemented in HTML5
-					canvas + JavaScript.
-				</li>
-			</ul>
+			This is a pure client-side application that uses one or more Web
+			Workers for doing the computations without blocking the UI.
+			<p>
+				The application can be used online <a href="synth/">here</a>,
+				and the GitHub repository is
+				<a href="https://github.com/lcrespom/genetic-tsp-js">here</a>.
+				There is also a <a href="https://goo.gl/UmWffA">Presentation</a>
+				that explain what is a Genetic Algorithm and why it is a good
+				technique for solving the Traveling Salesman Problem.
+			</p>
 		</p>
 
 		<p>Check out its
@@ -134,6 +85,46 @@
 			<a href="https://github.com/lcrespom/shape-wars">GitHub repository</a>
 		</p>
 
+
+		<h2>Minion</h2>
+		<p>Minion is a tiny WebComponent-oriented UI framework. It can be learned
+			very fast and is good enough for small to medium single-page applications.
+		</p>
+		<p>Minion does not make use of the WebComponent standard for building the UI,
+			but still the development approach is based on breaking the Web App into
+			independent and reusable web components. Each component is defined as:
+			<ul>
+				<li>An HTML template, containing plain HTML and Mustache template expressions.
+				</li>
+				<li>An optional JavaScript Object or class. If present, several of its methods
+					will be invoked during the application lifecycle: when the component is
+					created, after it is rendered and before it is removed. Also, components
+					hold data accessible to the template and can handle events triggered from
+					elements it contains.
+				</li>
+			</ul>
+		</p>
+		<p>For more information and a working demo, check out its
+			<a href="https://github.com/lcrespom/minion">GitHub repository</a>.
+		</p>
+
+
+		<h2>jsonfmt</h2>
+		<p>A simple JSON formatting command-line tool, which can be used to pack or nicely format
+			JSON files. Typical usages are:
+			<ul>
+				<li>Packing a nicely formatted JSON file in to a single line, as a build
+					step to reduce the size of the target file.
+				</li>
+				<li>Formatting a JSON string into a more readable version of itself, so
+					it is easy to read and edit by human beings.
+				</li>
+			</ul>
+		</p>
+		<p>Check out its
+			<a href="https://github.com/lcrespom/jsonfmt">GitHub repository</a>
+			for more detailed documentation.
+		</p>
 
 
 	</div>
