Fixed typos and added target='_blank'

--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
 			such as Chrome, FireFox or Safari, but has no server-side code.
 		</p>
 		<p>
-			Modulator can be used live <a href="synth/">here</a>.
+			Modulator can be used live <a target="_blank" href="synth/">here</a>.
 		</p>
 		<p>
-			You can check its <a href="synth/help.html">documentation</a>, and
+			You can check its <a target="_blank" href="synth/help.html">documentation</a>, and
 			get the source code from the
-			<a href="https://github.com/lcrespom/Modulator">GitHub repository</a>.
-			There is also a <a href="/synth/prz">presentation</a>
+			<a target="_blank" href="https://github.com/lcrespom/Modulator">GitHub repository</a>.
+			There is also a <a target="_blank" href="/synth/prz">presentation</a>
 			that I use when I give a talk about Web Audio
 			and Modulator.
 		</p>
@@ -49,10 +49,10 @@
 			This is a pure client-side application that uses one or more Web
 			Workers for doing the computations without blocking the UI.
 			<p>
-				The application can be used online <a href="synth/">here</a>,
+				The application can be used online <a target="_blank" href="tsp/">here</a>,
 				and the GitHub repository is
-				<a href="https://github.com/lcrespom/genetic-tsp-js">here</a>.
-				There is also a <a href="https://goo.gl/UmWffA">Presentation</a>
+				<a target="_blank" href="https://github.com/lcrespom/genetic-tsp-js">here</a>.
+				There is also a <a target="_blank" href="https://goo.gl/UmWffA">Presentation</a>
 				that explain what is a Genetic Algorithm and why it is a good
 				technique for solving the Traveling Salesman Problem.
 			</p>
