--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 				and the GitHub repository is
 				<a target="_blank" href="https://github.com/lcrespom/genetic-tsp-js">here</a>.
 				There is also a <a target="_blank" href="https://goo.gl/UmWffA">Presentation</a>
-				that explain what is a Genetic Algorithm and why it is a good
+				that explains what is a Genetic Algorithm and why it is a good
 				technique for solving the Traveling Salesman Problem.
 			</p>
 		</p>
