--- a/live-coding/live-coding.html
+++ b/live-coding/live-coding.html
@@ -1,9 +1,9 @@
 <!-- Top row with title and a couple of buttons -->
 <div class="app-navbar">
 	<div class="left-buttons">
-		<a href="/#synth" class="btn btn-primary btn-sm">Synth</a>
+		<a href="#synth" class="btn btn-primary btn-sm">Synth</a>
 		&nbsp;
-		<a href="/#live-coding" class="btn btn-primary btn-sm active">Code</a>
+		<a href="#live-coding" class="btn btn-primary btn-sm active">Code</a>
 	</div>
 	<div class="logo">
 		<img src="img/logo.svg">
