--- a/live-coding/help/lc-help.html
+++ b/live-coding/help/lc-help.html
@@ -27,6 +27,7 @@
 				<li><a href="#about">About</a></li>
 				<li><a href="#tutorial">Tutorial</a></li>
 				<li><a href="#examples">Examples</a></li>
+				<li><a href="#shortcuts">Keyboard shortcuts</a></li>
 				<li><a href="#lc-definitions.ts">API reference</a></li>
 			</ul>
 			<b id="in-this-page">In this page</b>
