Fixed theme bug

--- a/live-coding/index.html
+++ b/live-coding/index.html
@@ -13,7 +13,7 @@
 
 <body>
 <script>
-	if (localStorage.walc_prefs_theme = 'dark')
+	if (localStorage.walc_prefs_theme == 'dark')
 		document.body.classList.add('dark')
 </script>
 
