--- a/live-coding/p5j.html
+++ b/live-coding/p5j.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="css/bootstrap/bootstrap-theme.min.css">
 	<link rel="stylesheet" href="css/nanoscroller.css">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
-	<link rel="shortcut icon" href="modulator32.ico" />
+	<!-- <link rel="shortcut icon" href="modulator32.ico" /> -->
 </head>
 
 <body>
@@ -53,7 +53,7 @@ function createCanvasParent() {
 	})
 	return p5c
 }
-</script>	
+</script>
 
 </body>
 </html>
