Updated modulator link

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 			such as Chrome, FireFox or Safari, but has no server-side code.
 		</p>
 		<p>
-			Modulator can be used live <a target="_blank" href="https://lcrespom.github.io/synth/">here</a>.
+			Modulator can be used live 👉 <a target="_blank" href="https://lcrespom.github.io/live-coding/">here</a>.
 		</p>
 		<p>
 			You can check its <a target="_blank" href="synth/help.html">documentation</a>, and
