Improved styles/ux

--- a/typing-contest/index.html
+++ b/typing-contest/index.html
@@ -24,7 +24,9 @@
 
 	<h2>Statistics</h2>
 	<b>Time</b>: <span id="stat_time"></span> <br/>
-	<b>Errors</b>: <span id="stat_errors">0</span> <br/>
+	<div id="errors_row">
+		<b>Errors</b>: <span id="stat_errors">0</span>
+	</div>
 	<b>Speed</b>: <span id="stat_speed">0</span> keys/min<br/>
 </div>
 
