--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
 				<a target="_blank" href="https://github.com/lcrespom/genetic-tsp-js">here</a>.
 				There is also a <a target="_blank" href="https://goo.gl/UmWffA">Presentation</a>
 				that explains what is a Genetic Algorithm and why it is a good
-				technique for solving the Traveling Salesman Problem.
+				technique for solving the Traveling Salesman Problem,
+				and a corresponding <a href="https://www.youtube.com/watch?v=PAlYMy584Vo">video</a> of me presenting this software.
 			</p>
 		</p>
 
