--- a/index.html
+++ b/index.html
@@ -1,118 +1,169 @@
-<!doctype html>
-<head>
-	<meta charset="utf-8">
-	<title>Luis Crespo GitHub site</title>
-	<style>
-		body {
-			font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
-		}
-		.content {
-			margin: 1em auto;
-			max-width: 850px;
-		}
-		h1, h2 {
-			border-bottom: 1px solid #CCC;
-			padding-bottom: 4px;
-		}
-	</style>
-</head>
-<body>
-	<div class="content">
-		<h1>My projects</h1>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8" />
+    <title>Luis Crespo GitHub site</title>
+    <style>
+      body {
+        font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+      }
+      main {
+        margin: 1em auto;
+        max-width: 850px;
+      }
+      h1,
+      h2 {
+        border-bottom: 1px solid #ccc;
+        padding-bottom: 4px;
+      }
+    </style>
+  </head>
+  <body>
+    <main>
+      <h1>My projects</h1>
 
-		<h2>Modulator</h2>
-		<p>A graphical modular synthesizer, using the
-			<a href="https://webaudio.github.io/web-audio-api/">Web Audio API</a>
-		</p>
-		<p>Modulator is a totally static HTML/JS app. It requires a modern browser
-			such as Chrome, FireFox or Safari, but has no server-side code.
-		</p>
-		<p>
-			Modulator can be used live 👉 <a target="_blank" href="https://lcrespom.github.io/live-coding/">here</a>.
-		</p>
-		<p>
-			You can check its <a target="_blank" href="synth/help.html">documentation</a>, and
-			get the source code from the
-			<a target="_blank" href="https://github.com/lcrespom/Modulator">GitHub repository</a>.
-			There is also a <a target="_blank" href="/synth/prz">presentation</a>
-			that I use when I give a talk about Web Audio
-			and Modulator.
-		</p>
-		<p>Contributions are welcome. Please read the ToDo list in README.md from the
-			repository for suggestions.
-		</p>
+      <!-------------------- Modulator -------------------->
+      <h2>Modulator</h2>
+      <p>
+        A graphical modular synthesizer, using the
+        <a href="https://webaudio.github.io/web-audio-api/">Web Audio API</a>
+      </p>
+      <p>
+        Modulator is a totally static HTML/JS app. It requires a modern browser
+        such as Chrome, FireFox or Safari, but has no server-side code.
+      </p>
+      <p>
+        Modulator can be used live 👉
+        <a target="_blank" href="https://lcrespom.github.io/live-coding/"
+          >here</a
+        >.
+      </p>
+      <p>
+        You can check its
+        <a target="_blank" href="synth/help.html">documentation</a>, and get the
+        source code from the
+        <a target="_blank" href="https://github.com/lcrespom/Modulator"
+          >GitHub repository</a
+        >. There is also a <a target="_blank" href="/synth/prz">presentation</a>
+        that I use when I give a talk about Web Audio and Modulator.
+      </p>
+      <p>
+        Contributions are welcome. Please read the ToDo list in README.md from
+        the repository for suggestions.
+      </p>
 
+      <!-------------------- Genetic TSP -------------------->
+      <h2>Genetic TSP</h2>
+      <p>
+        A genetic engine that solves the Traveling Salesman Problem (TSP):
+        finding the shortest path for visiting a given set of locations. This is
+        a pure client-side application that uses one or more Web Workers for
+        doing the computations without blocking the UI.
+      </p>
+      <p>
+        The application can be used online
+        <a target="_blank" href="tsp/">here</a>, and the GitHub repository is
+        <a target="_blank" href="https://github.com/lcrespom/genetic-tsp-js"
+          >here</a
+        >. There is also a
+        <a target="_blank" href="https://goo.gl/UmWffA">Presentation</a> that
+        explains what is a Genetic Algorithm and why it is a good technique for
+        solving the Traveling Salesman Problem, and a corresponding
+        <a href="https://www.youtube.com/watch?v=PAlYMy584Vo">video</a>
+        of me presenting this software.
+      </p>
 
-		<h2>Genetic TSP</h2>
-		<p>A genetic engine that solves the Traveling Salesman Problem (TSP):
-			finding the shortest path for visiting a given set of locations.
-			This is a pure client-side application that uses one or more Web
-			Workers for doing the computations without blocking the UI.
-			<p>
-				The application can be used online <a target="_blank" href="tsp/">here</a>,
-				and the GitHub repository is
-				<a target="_blank" href="https://github.com/lcrespom/genetic-tsp-js">here</a>.
-				There is also a <a target="_blank" href="https://goo.gl/UmWffA">Presentation</a>
-				that explains what is a Genetic Algorithm and why it is a good
-				technique for solving the Traveling Salesman Problem,
-				and a corresponding <a href="https://www.youtube.com/watch?v=PAlYMy584Vo">video</a> of me presenting this software.
-			</p>
-		</p>
+      <!-------------------- Neural Network -------------------->
+      <h2>Neural Network</h2>
+      <p>
+        A neural network, implementing the backpropagation algorithm in order to
+        learn and adjust its weights from sample input and output data. After
+        the learning phase, the network can be used to generate the output from
+        new input data.
+      </p>
+      <p>
+        A <a href="nnn/">web-based user interface</a> is provided, which can be
+        used to adjust the network parameters and provide learn and test data.
+      </p>
 
+      <p>
+        Check out its
+        <a href="https://github.com/lcrespom/nnn">GitHub repository</a>
+      </p>
 
-		<h2>Neural Network</h2>
-		<p>A neural network, implementing the backpropagation algorithm in order to learn and
-			adjust its weights from sample input and output data. After the learning phase,
-			the network can be used to generate the output from new input data.</p>
-		<p>A <a href="nnn/">web-based user interface</a> is provided, which can be used
-			to adjust the network parameters and provide learn and test data.
-		</p>
+      <!-------------------- Shape Wars -------------------->
+      <h2>Shape Wars</h2>
+      <p>
+        A small retro <em>Space Invaders</em> style videogame using the HTML5
+        <code>&lt;CANVAS&gt;</code> element and 2D vectorial drawing.
+      </p>
+      <p>
+        You can play it <a href="shape-wars">Here</a>. Use <b>Z</b> and
+        <b>X</b> to move the ship left and right, and <b>M</b> to shoot.
+      </p>
+      <p>
+        Check out its
+        <a href="https://github.com/lcrespom/shape-wars">GitHub repository</a>
+      </p>
 
-		<p>Check out its
-			<a href="https://github.com/lcrespom/nnn">GitHub repository</a>
-		</p>
+      <!-------------------- Typing Contest -------------------->
+      <h2>Typing Contest</h2>
+      <p>
+        A web application to practice typing. It lets the user provide some text
+        to type, and measures the elapsed time, amount of errors and typing
+        speed in keys per minute.
+      </p>
+      <p>
+        You can test it
+        <a href="https://lcrespom.github.io/typing-contest/">Here</a>, or check
+        its
+        <a href="https://github.com/lcrespom/typing-contest"
+          >GitHub repository</a
+        >.
+      </p>
 
+      <!-------------------- Neon Dance -------------------->
+      <h2>Neon Dance</h2>
+      <p>
+        A videgame to practice typing. Figures with letters bump around the
+        screen. You must type each letter before it touches the ground.
+      </p>
+      <p>
+        You can test it
+        <a href="https://lcrespom.github.io/neon-dance/">Here</a>, or check its
+        <a href="https://github.com/lcrespom/neon-dance">GitHub repository</a>.
+      </p>
 
-		<h2>Shape Wars</h2>
-		<p>A small retro <em>Space Invaders</em> style videogame using the HTML5 <code>&lt;CANVAS&gt;</code> element and 2D vectorial drawing.</p>
-
-		<p>You can play it <a href=shape-wars>Here</a>. Use <b>Z</b> and <b>X</b> to move the ship left and right, and <b>M</b> to shoot.
-
-		<p>Check out its
-			<a href="https://github.com/lcrespom/shape-wars">GitHub repository</a>
-		</p>
-
-
-		<h2>Minion</h2>
-		<p>Minion is a tiny WebComponent-oriented UI framework. It can be learned
-			very fast and is good enough for small to medium single-page applications.
-		</p>
-		<p>Minion does not make use of the WebComponent standard for building the UI,
-			but still the development approach is based on breaking the Web App into
-			independent and reusable web components. Each component is defined as:
-			<ul>
-				<li>An HTML template, containing plain HTML and Mustache template expressions.
-				</li>
-				<li>An optional JavaScript Object or class. If present, several of its methods
-					will be invoked during the application lifecycle: when the component is
-					created, after it is rendered and before it is removed. Also, components
-					hold data accessible to the template and can handle events triggered from
-					elements it contains.
-				</li>
-			</ul>
-		</p>
-		<p>For more information and a working demo, check out its
-			<a href="https://github.com/lcrespom/minion">GitHub repository</a>.
-		</p>
-
-
-		<h2>Typing contest</h2>
-		<p>A web application to practice typing. It lets the user provide some text to type,
-			and measures the elapsed time, amount of errors and typing speed in keys per minute.
-		</p>
-		<p>You can test it <a href="https://lcrespom.github.io/typing-contest/">Here</a>,
-			or check its <a href="https://github.com/lcrespom/typing-contest">GitHub repository</a>.
-		</p>
-	</div>
-</body>
+      <!-------------------- Minion -------------------->
+      <h2>Minion</h2>
+      <p>
+        Minion is a tiny WebComponent-oriented UI framework. It can be learned
+        very fast and is good enough for small to medium single-page
+        applications.
+      </p>
+      <p>
+        Minion does not make use of the WebComponent standard for building the
+        UI, but still the development approach is based on breaking the Web App
+        into independent and reusable web components. Each component is defined
+        as:
+      </p>
+      <ul>
+        <li>
+          An HTML template, containing plain HTML and Mustache template
+          expressions.
+        </li>
+        <li>
+          An optional JavaScript Object or class. If present, several of its
+          methods will be invoked during the application lifecycle: when the
+          component is created, after it is rendered and before it is removed.
+          Also, components hold data accessible to the template and can handle
+          events triggered from elements it contains.
+        </li>
+      </ul>
+      <p>
+        For more information and a working demo, check out its
+        <a href="https://github.com/lcrespom/minion">GitHub repository</a>.
+      </p>
+    </main>
+  </body>
 </html>
